# WizERD

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py  wizerd.py  wizerd.spec
.github/workflows/: ci.yml  homebrew-tap.yml  release.yml
dev/dumps/: README.md
dev/dumps/examples/: large_schema.sql  schema.sql  simple_schema.sql
dev/outputs/: README.md
docs/: COMMIT_GUIDE.md  PROJECT_OUTLINE.md  README.md  RELEASE.md  cli-reference.md  configuration.md  examples.md  getting-started.md  index.md  installation.md  spacing-profiles.md  themes.md
docs/verifications/: parser_verification_plan.md
scripts/: generate_docs_images.py
tests/: test_config_loader.py  test_generate.py  test_layout_engine.py  test_parser.py  test_renderer.py  test_spacing_profile.py  test_theme.py
tests/fixtures/: complex_sample.expected.json  complex_sample.sql
wizerd/: __init__.py  __main__.py  cli.py  config.py  config_loader.py  pipeline.py  py.typed
wizerd/graph/: __init__.py  layout_graph.py
wizerd/layout/: __init__.py  elk_runner.mjs  engine.py  package-lock.json  package.json  spacing.py
wizerd/model/: __init__.py  schema.py
wizerd/parser/: __init__.py  ddl_parser.py
wizerd/render/: __init__.py  export.py  svg_renderer.py
wizerd/templates/: __init__.py
wizerd/templates/config/: __init__.py  default.yaml  full.yaml  minimal.yaml
wizerd/theme/: __init__.py  loader.py  palette.py  presets.json  presets.py  renderer_theme.py
